Changes in home page, about us content

--- a/index.html
+++ b/index.html
@@ -431,8 +431,9 @@
                                     <img src="images/icon-service-1.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology
-                                        project on time.</p>
+                                    <p>Our IT Project Management solution is intended to transform
+                                        difficult ideas into successful results.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -462,8 +463,9 @@
                                     <img src="images/icon-service-2.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology
-                                        project on time.</p>
+                                    <p>Our Custom Software Development services are
+                                        innovatively suited to your specific company requirements.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -493,8 +495,7 @@
                                     <img src="images/icon-service-3.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology
-                                        project on time.</p>
+                                    <p>Our Digital Transformation Services help business embrace innovation in a rapidly changing digital market.  </p>
                                 </div>
                             </div>
                         </div>
@@ -524,8 +525,9 @@
                                     <img src="images/icon-service-4.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology
-                                        project on time.</p>
+                                    <p>We develop cutting-edge online and mobile applications that blend
+                                attractive design and smooth functionality.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -555,8 +557,8 @@
                                     <img src="images/icon-service-5.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology
-                                        project on time.</p>
+                                    <p>We offer secure, high-performing networking solutions to organizations through our Network Design and
+                                        Support services.</p>
                                 </div>
                             </div>
                         </div>
@@ -586,8 +588,8 @@
                                     <img src="images/icon-service-6.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology
-                                        project on time.</p>
+                                    <p>Our data analytics and insights services assist businesses in transforming raw data into actionable intelligence.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -826,8 +828,13 @@
                             <div class="work-process-content wow fadeInUp">
                                 <h2>step 01</h2>
                                 <h3>Understanding your needs</h3>
-                                <p>We start by listening to your challenges and goals to identify your unique IT
-                                    requirements.</p>
+                                <p>we believe that every successful solution begins with understanding you. Before we
+                                    write a single line of code or design a system, we take the time to deeply analyze
+                                    your business objectives, challenges, and vision. Our collaborative approach ensures
+                                    that every strategy, design, and technology we deliver is perfectly aligned with
+                                    your goals. By listening closely and asking the right questions, we transform your
+                                    needs into innovative, practical, and scalable IT solutions that truly make an
+                                    impact.</p>
                             </div>
 
                             <div class="work-process-image">
@@ -843,8 +850,14 @@
                             <div class="work-process-content wow fadeInUp" data-wow-delay="0.2s">
                                 <h2>step 02</h2>
                                 <h3>Customized consultation</h3>
-                                <p>We start by listening to your challenges and goals to identify your unique IT
-                                    requirements.</p>
+                                <p>Every business is unique — and so are its technology needs. At Adroitx,
+                                    we offer personalized IT consultations designed to align with your specific goals,
+                                    industry, and challenges. Our experts work closely with you to assess your current
+                                    systems, identify opportunities, and develop a clear roadmap for digital growth.
+                                    Whether you’re optimizing operations, upgrading infrastructure, or exploring new
+                                    technologies, our customized consultation ensures you get solutions that are
+                                    strategic, scalable, and built just for you.
+                                </p>
                             </div>
 
                             <div class="work-process-image">
@@ -860,8 +873,13 @@
                             <div class="work-process-content wow fadeInUp" data-wow-delay="0.4s">
                                 <h2>step 03</h2>
                                 <h3>Collaboration with stakeholders</h3>
-                                <p>We start by listening to your challenges and goals to identify your unique IT
-                                    requirements.</p>
+                                <p>we believe collaboration is the foundation of every successful project. We engage
+                                    with all key stakeholders — from executives and technical teams to end users — to
+                                    ensure every perspective is heard and every requirement is met. Through transparent
+                                    communication, regular updates, and a shared vision, we create an environment where
+                                    ideas flow freely and solutions align perfectly with business objectives. Our
+                                    collaborative approach ensures that technology serves not just the organization, but
+                                    everyone it touches.</p>
                             </div>
 
                             <div class="work-process-image">
@@ -911,8 +929,8 @@
                             <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1"
                                 data-bs-parent="#faqaccordion">
                                 <div class="accordion-body">
-                                    <p>We implement advanced cybersecurity measures, including encryption, firewalls,
-                                        and regular system audits, to protect your sensitive.</p>
+                                    <p>We offer a full range of IT solutions including software development, web and mobile app development, cloud services,
+                                        AI integration, cybersecurity, and IT consulting.</p>
                                 </div>
                             </div>
                         </div>
@@ -929,8 +947,8 @@
                             <div id="collapse2" class="accordion-collapse collapse show" aria-labelledby="heading2"
                                 data-bs-parent="#faqaccordion">
                                 <div class="accordion-body">
-                                    <p>We implement advanced cybersecurity measures, including encryption, firewalls,
-                                        and regular system audits, to protect your sensitive.</p>
+                                    <p>Strict access control procedures, frequent vulnerability assessments, secure cloud architecture, and cutting-edge
+                                        encryption are how we guarantee data protection.</p>
                                 </div>
                             </div>
                         </div>
@@ -947,8 +965,7 @@
                             <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
                                 data-bs-parent="#faqaccordion">
                                 <div class="accordion-body">
-                                    <p>We implement advanced cybersecurity measures, including encryption, firewalls,
-                                        and regular system audits, to protect your sensitive.</p>
+                                    <p>yes we are here to serve you 24/7</p>
                                 </div>
                             </div>
                         </div>
@@ -965,8 +982,8 @@
                             <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
                                 data-bs-parent="#faqaccordion">
                                 <div class="accordion-body">
-                                    <p>We implement advanced cybersecurity measures, including encryption, firewalls,
-                                        and regular system audits, to protect your sensitive.</p>
+                                    <p>Yes, we provide customized IT training systems to help teams enhance their technical skills and stay updated with the
+                                        latest technologies.</p>
                                 </div>
                             </div>
                         </div>
@@ -989,8 +1006,8 @@
                             <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5"
                                 data-bs-parent="#faqaccordion1">
                                 <div class="accordion-body">
-                                    <p>Our pricing plans are flexible and transparent, designed to fit budgets. We offer
-                                        detailed proposals after assessing your specific needs.</p>
+                                    <p>Yes, we work with businesses of all sizes—from startups to large enterprises—offering scalable IT solutions tailored
+                                        to their unique needs.</p>
                                 </div>
                             </div>
                         </div>
@@ -1007,8 +1024,8 @@
                             <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6"
                                 data-bs-parent="#faqaccordion1">
                                 <div class="accordion-body">
-                                    <p>Our pricing plans are flexible and transparent, designed to fit budgets. We offer
-                                        detailed proposals after assessing your specific needs.</p>
+                                    <p>we can provide our services for all sector with our pricing plans are flexible and transparent, designed to fit
+                                        budgets. We offer detailed proposals after assessing your specific needs.</p>
                                 </div>
                             </div>
                         </div>
@@ -1025,8 +1042,8 @@
                             <div id="collapse7" class="accordion-collapse collapse show" aria-labelledby="heading7"
                                 data-bs-parent="#faqaccordion1">
                                 <div class="accordion-body">
-                                    <p>Our pricing plans are flexible and transparent, designed to fit budgets. We offer
-                                        detailed proposals after assessing your specific needs.</p>
+                                    <p>An IT company’s pricing plan works by charging clients based on project scope, complexity, technology, and chosen
+                                        payment model (fixed, hourly, subscription, or value-based).</p>
                                 </div>
                             </div>
                         </div>
@@ -1037,14 +1054,14 @@
                             <h2 class="accordion-header" id="heading8">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
-                                    8. How can I get started?
+                                    8. Do you offer end-to-end development or only specific phases of a project?
                                 </button>
                             </h2>
                             <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8"
                                 data-bs-parent="#faqaccordion1">
                                 <div class="accordion-body">
-                                    <p>Our pricing plans are flexible and transparent, designed to fit budgets. We offer
-                                        detailed proposals after assessing your specific needs.</p>
+                                    <p>Yes, we offer end-to-end development-from strategy and design to development, deployment, and ongoing support. We
+                                        also work on individual phases based on client requirements.</p>
                                 </div>
                             </div>
                         </div>
