--- a/service-single.html
+++ b/service-single.html
@@ -390,8 +390,8 @@
                                     <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1"
                                         data-bs-parent="#faqaccordion">
                                         <div class="accordion-body">
-                                            <p>We implement advanced cybersecurity measures, including encryption,
-                                                firewalls, and regular system audits, to protect your sensitive.</p>
+                                            <p>We offer a full range of IT solutions including software development, web and mobile app development, cloud services,
+                                                AI integration, cybersecurity, and IT consulting.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -408,8 +408,8 @@
                                     <div id="collapse2" class="accordion-collapse collapse show"
                                         aria-labelledby="heading2" data-bs-parent="#faqaccordion">
                                         <div class="accordion-body">
-                                            <p>We implement advanced cybersecurity measures, including encryption,
-                                                firewalls, and regular system audits, to protect your sensitive.</p>
+                                            <p>Strict access control procedures, frequent vulnerability assessments, secure cloud architecture, and cutting-edge
+                                                encryption are how we guarantee data protection.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -427,8 +427,7 @@
                                     <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
                                         data-bs-parent="#faqaccordion">
                                         <div class="accordion-body">
-                                            <p>We implement advanced cybersecurity measures, including encryption,
-                                                firewalls, and regular system audits, to protect your sensitive.</p>
+                                             <p>yes we are here to serve you 24/7</p>
                                         </div>
                                     </div>
                                 </div>
@@ -446,8 +445,8 @@
                                     <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
                                         data-bs-parent="#faqaccordion">
                                         <div class="accordion-body">
-                                            <p>We implement advanced cybersecurity measures, including encryption,
-                                                firewalls, and regular system audits, to protect your sensitive.</p>
+                                            <p>Yes, we provide customized IT training systems to help teams enhance their technical skills and stay updated with the
+                                                latest technologies.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -493,8 +492,8 @@
 
                             <!-- CTA Contact Button Start -->
                             <div class="cta-contact-btn">
-                                <a href="tel:123456789"><img src="images/icon-sidebar-cta-phone.svg" alt=""> +123 456
-                                    789</a>
+                                <a href="tel:123456789"><img src="images/icon-sidebar-cta-phone.svg" alt=""> +123 000
+                                    000</a>
                             </div>
                             <!-- CTA Contact Button End -->
                         </div>
