--- a/services.html
+++ b/services.html
@@ -214,7 +214,9 @@
                                     <img src="images/icon-service-1.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology project on time.</p>
+                                    <p>Our IT Project Management solution is intended to transform
+                                        difficult ideas into successful results.
+                                    </p>
                                 </div>
                             </div>
                         </div>                        
@@ -244,7 +246,9 @@
                                     <img src="images/icon-service-2.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology project on time.</p>
+                                    <p>Our Custom Software Development services are
+                                        innovatively suited to your specific company requirements.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -274,7 +278,7 @@
                                     <img src="images/icon-service-3.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology project on time.</p>
+                                    <p>Our Digital Transformation Services help business embrace innovation in a rapidly changing digital market. </p>
                                 </div>
                             </div>
                         </div>
@@ -304,7 +308,9 @@
                                     <img src="images/icon-service-4.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology project on time.</p>
+                                    <p>We develop cutting-edge online and mobile applications that blend
+                                        attractive design and smooth functionality.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -334,7 +340,8 @@
                                     <img src="images/icon-service-5.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology project on time.</p>
+                                    <p>We offer secure, high-performing networking solutions to organizations through our Network Design and
+                                        Support services.</p>
                                 </div>
                             </div>
                         </div>
@@ -364,7 +371,7 @@
                                     <img src="images/icon-service-6.svg" alt="">
                                 </div>
                                 <div class="service-box-content">
-                                    <p>IT project management service ensure the successful delivery of technology project on time.</p>
+                                    <p>Our data analytics and insights services assist businesses in transforming raw data into actionable intelligence.
                                 </div>
                             </div>
                         </div>
