changes in home page content

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                             </div>
                             <div class="project-content">
                                 <p>Development</p>
-                                <h3><a href="project-single.html">Unified Development Framework for Teams</a></h3>
+                                <h3>Unified Development Framework for Teams</h3>
                             </div>
                         </div>
                         <!-- Project Item End -->
@@ -742,7 +742,7 @@
                             </div>
                             <div class="project-content">
                                 <p>Integration</p>
-                                <h3><a href="project-single.html">Our journey of technological excellence</a></h3>
+                                <h3>Our journey of technological excellence</h3>
                             </div>
                         </div>
                         <!-- Project Item End -->
@@ -757,7 +757,7 @@
                             </div>
                             <div class="project-content">
                                 <p>Consulting</p>
-                                <h3><a href="project-single.html">Intelligent Task Management Solutions</a></h3>
+                                <h3>Intelligent Task Management Solutions</h3>
                             </div>
                         </div>
                         <!-- Project Item End -->
@@ -772,7 +772,7 @@
                             </div>
                             <div class="project-content">
                                 <p>Infrastructure</p>
-                                <h3><a href="project-single.html">End-to-end IT project success stories</a></h3>
+                                <h3>End-to-end IT project success stories</h3>
                             </div>
                         </div>
                         <!-- Project Item End -->
