CHanges in home page and service page, images changed

--- a/services.html
+++ b/services.html
@@ -201,7 +201,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/it-project.png" alt="">
+                                    <img src="images/Services-04-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -233,7 +233,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/about-img-2-1-1.png" alt="">
+                                    <img src="images/Services-03-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -265,7 +265,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/service-transparent.png" alt="">
+                                    <img src="images/Services-02-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -295,7 +295,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/web-mobile-development.png" alt="">
+                                    <img src="images/Services-05-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -327,7 +327,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/network-design.png" alt="">
+                                    <img src="images/Services-06-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -358,7 +358,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/data-analytics.png" alt="">
+                                    <img src="images/services-01-2.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -498,7 +498,7 @@
                             <!-- Our Skill Image Start -->
                              <div class="our-skill-img">
                                 <figure class="image-anime reveal">
-                                    <img src="images/Skills-01-1.png" alt="">
+                                    <img src="images/Skills-01-2.png" alt="">
                                 </figure>
                              </div>
                             <!-- Our Skill Image End -->
@@ -569,7 +569,7 @@
                             <!-- Our Skill Image Start -->
                             <div class="our-skill-img">
                                 <figure class="image-anime reveal">
-                                    <img src="images/Skills-02-1.png" alt="">
+                                    <img src="images/Skills-02-2.png" alt="">
                                 </figure>
                                 </div>
                             <!-- Our Skill Image End -->
