--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/it-project.png" alt="">
+                                    <img src="images/Services-04-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -450,7 +450,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/about-img-2-1-1.png" alt="">
+                                    <img src="images/Services-03-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -482,7 +482,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/service-transparent.png" alt="">
+                                    <img src="images/Services-02-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -512,7 +512,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/web-mobile-development.png" alt="">
+                                    <img src="images/Services-05-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -544,7 +544,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/network-design.png" alt="">
+                                    <img src="images/Services-06-1.png" alt="">
                                 </figure>
                             </a>
                         </div>
@@ -575,7 +575,7 @@
                         <div class="service-image">
                             <a href="service-single.html">
                                 <figure class="image-anime">
-                                    <img src="images/data-analytics.png" alt="">
+                                    <img src="images/services-01-2.png" alt="">
                                 </figure>
                             </a>
                         </div>
