--- a/contact.html
+++ b/contact.html
@@ -89,13 +89,13 @@
                                     <div class="offcanvas-body">
                                         <!-- Header Contact Box Start -->
                                         <div class="header-contact-box">
-                                            <div class="icon-box">
+                                            <!-- <div class="icon-box">
                                                 <img src="images/icon-phone-accent.svg" alt="">
                                             </div>
                                             <div class="header-contact-box-content">
                                                 <h3>phone</h3>
                                                 <p>+123 000 000</p>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <!-- Header Contact Box End -->
 
@@ -118,7 +118,7 @@
                                             </div>
                                             <div class="header-contact-box-content">
                                                 <h3>address</h3>
-                                                <p>Barsha heights, I-rise tower, Dubai.</p>
+                                                <p>Barsha Heights, UAE.</p>
                                             </div>
                                         </div>
                                         <!-- Header Contact Box End -->
@@ -280,13 +280,13 @@
 
                             <!-- Contact Us Cta Start -->
                             <div class="contact-us-cta">
-                                <div class="icon-box">
+                                <!-- <div class="icon-box">
                                     <img src="images/icon-contact-cta.svg" alt="">
-                                </div>
-                                <div class="contact-cta-content">
+                                </div> -->
+                                <!-- <div class="contact-cta-content">
                                     <p><a href="#">+123 000 0000</a></p>
                                     <p><a href="#">adroitx@gmail.com</a></p>
-                                </div>
+                                </div> -->
                             </div>
                             <!-- Contact Us Cta End -->
                         </div>
@@ -307,7 +307,7 @@
                     <!-- Contact Info Box Start -->
                     <div class="contact-info-box">
                         <!-- Contact Info Item Start -->
-                        <div class="contact-info-item wow fadeInUp">
+                        <!-- <div class="contact-info-item wow fadeInUp">
                             <div class="contact-info-header">
                                 <div class="icon-box">
                                     <img src="images/icon-phone.svg" alt="">
@@ -319,7 +319,7 @@
                             <div class="contact-info-content">
                                 <h3><a href="tel:586369753">+123 000 000</a></h3>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- Contact Info Item End -->
 
                         <!-- Contact Info Item Start -->
@@ -349,7 +349,7 @@
                                 </div>
                             </div>
                             <div class="contact-info-content">
-                                <h3>Barsha heights, I-rise tower, Dubai.</h3>
+                                <h3>Barsha Heights, UAE.</h3>
                             </div>
                         </div>
                         <!-- Contact Info Item End -->
@@ -441,7 +441,7 @@
                                             <img src="images/icon-location-accent.svg" alt="">
                                         </div>
                                         <div class="footer-contact-item-content">
-                                            <p>Barsha heights, I-rise tower, Dubai.</p>
+                                            <p>Barsha Heights, UAE.</p>
                                         </div>
                                     </div>
                                     <!-- Contact Contact Item End -->
@@ -452,13 +452,13 @@
 
                             <!-- Footer Content Box Start -->
                             <div class="footer-contact-box">
-                                <div class="icon-box">
+                                <!-- <div class="icon-box">
                                     <img src="images/icon-phone-accent.svg" alt="">
                                 </div>
                                 <div class="footer-contact-content">
                                     <p>Need help!</p>
                                     <h3><a href="tel:+123456789">+123 000 0000</a></h3>
-                                </div>
+                                </div> -->
                             </div>
                             <!-- Footer Content Box End -->
                         </div>
