--- a/service-single.html
+++ b/service-single.html
@@ -97,13 +97,13 @@
                                     <div class="offcanvas-body">
                                         <!-- Header Contact Box Start -->
                                         <div class="header-contact-box">
-                                            <div class="icon-box">
+                                            <!-- <div class="icon-box">
                                                 <img src="images/icon-phone-accent.svg" alt="">
                                             </div>
                                             <div class="header-contact-box-content">
                                                 <h3>phone</h3>
                                                 <p>+123 000 000</p>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <!-- Header Contact Box End -->
 
@@ -491,10 +491,10 @@
                             <!-- CTA Contact Content End -->
 
                             <!-- CTA Contact Button Start -->
-                            <div class="cta-contact-btn">
+                            <!-- <div class="cta-contact-btn">
                                 <a href="tel:123456789"><img src="images/icon-sidebar-cta-phone.svg" alt=""> +123 000
                                     000</a>
-                            </div>
+                            </div> -->
                             <!-- CTA Contact Button End -->
                         </div>
                         <!-- Sidebar Cta Box End -->
@@ -569,7 +569,7 @@
                                             <img src="images/icon-location-accent.svg" alt="">
                                         </div>
                                         <div class="footer-contact-item-content">
-                                            <p>Barsha heights, I-rise tower, Dubai.</p>
+                                            <p>Barsha Heights, UAE.</p>
                                         </div>
                                     </div>
                                     <!-- Contact Contact Item End -->
@@ -580,13 +580,13 @@
 
                             <!-- Footer Content Box Start -->
                             <div class="footer-contact-box">
-                                <div class="icon-box">
+                                <!-- <div class="icon-box">
                                     <img src="images/icon-phone-accent.svg" alt="">
                                 </div>
                                 <div class="footer-contact-content">
                                     <p>Need help!</p>
                                     <h3><a href="tel:+123456789">+123 000 0000</a></h3>
-                                </div>
+                                </div> -->
                             </div>
                             <!-- Footer Content Box End -->
                         </div>
