--- a/services.html
+++ b/services.html
@@ -83,13 +83,13 @@
                                     <div class="offcanvas-body">
                                         <!-- Header Contact Box Start -->
                                         <div class="header-contact-box">
-                                            <div class="icon-box">
+                                            <!-- <div class="icon-box">
                                                 <img src="images/icon-phone-accent.svg" alt="">
                                             </div>
                                             <div class="header-contact-box-content">
                                                 <h3>phone</h3>
                                                 <p>+123 456 789</p>
-                                            </div>
+                                            </div> -->
                                         </div>
                                         <!-- Header Contact Box End -->
 
@@ -112,7 +112,7 @@
                                             </div>
                                             <div class="header-contact-box-content">
                                                 <h3>address</h3>
-                                                <p>Barsha heights, I-rise tower, Dubai.</p>
+                                                <p>Barsha Heights, UAE.</p>
                                             </div>
                                         </div>
                                         <!-- Header Contact Box End -->
@@ -646,7 +646,7 @@
                                             <img src="images/icon-location-accent.svg" alt="">
                                         </div>
                                         <div class="footer-contact-item-content">
-                                            <p>Barsha heights, I-rise tower, Dubai.</p>
+                                            <p>Barsha Heights, UAE.</p>
                                         </div>
                                     </div>
                                     <!-- Contact Contact Item End -->
@@ -657,13 +657,13 @@
 
                             <!-- Footer Content Box Start -->
                             <div class="footer-contact-box">
-                                <div class="icon-box">
+                                <!-- <div class="icon-box">
                                     <img src="images/icon-phone-accent.svg" alt="">
                                 </div>
                                 <div class="footer-contact-content">
                                     <p>Need help!</p>
                                     <h3><a href="tel:+123456789">+123 000 0000</a></h3>
-                                </div>
+                                </div> -->
                             </div>
                             <!-- Footer Content Box End -->
                         </div>
